modified the index.html file and added putppy photo to the folder

--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito"
-      rel="stylesheet"
-    />
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" />
+</head>
 
-  <body>
+<body>
     <p id="text">Share this cute puppy photo with your friends!</p>
-
+    <!--
     <img
+
       src="https://images.unsplash.com/photo-1537151608828-ea2b11777ee8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3f6f7c47a2be772ea983ee9215ab08d8&auto=format&fit=crop&w=678&q=80"
-      alt="Cute Puppy"
+    
+alt="Cute Puppy"
+  
     />
+    -->
+    <img src="puppy-photo.webp" alt="Cute Puppy">
     <div class="share-container">
-      <section id="social-media">
-        <button id="email" class="social-button">
+        <section id="social-media">
+            <button id="email" class="social-button">
           <svg style="width:44px;height:44px" viewBox="0 0 24 24">
             <path
               fill="#141c3a"
@@ -26,7 +29,7 @@
             />
           </svg>
         </button>
-        <button id="facebook" class="social-button">
+            <button id="facebook" class="social-button">
           <svg style="width:44px;height:44px" viewBox="0 0 24 24">
             <path
               fill="#0069ff"
@@ -34,7 +37,7 @@
             />
           </svg>
         </button>
-        <button id="twitter" class="social-button">
+            <button id="twitter" class="social-button">
           <svg style="width:44px;height:44px" viewBox="0 0 24 24">
             <path
               fill="#00a9ff"
@@ -42,7 +45,7 @@
             />
           </svg>
         </button>
-        <button id="pinterest" class="social-button">
+            <button id="pinterest" class="social-button">
           <svg style="width:44px;height:44px" viewBox="0 0 24 24">
             <path
               fill="#fd4d3f"
@@ -50,10 +53,11 @@
             />
           </svg>
         </button>
-      </section>
-      <button id="share-button">Share</button>
+        </section>
+        <button id="share-button">Share</button>
     </div>
 
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
